dataset1235/2025-2/2868285114/users/214715729/executions/3792430146_2288958116.log
== SUBMISSION (2025-09-03 16:32:27)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor Jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo 2: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor Jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor Jogo 1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:30:39)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor Jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo 2: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor Jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor Jogo 1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:27:59)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo 1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:45)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:28:45)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo 2: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo 1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:28:38)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo 2: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo 1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:05)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1:
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:07)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1:
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:44)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:32:57)
-- CODE: 
quantidade = int(input())
jogo1 = float(input("Valor Jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo 2: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
Valor Jogo 1: Valor Jogo 2: 130.69
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
---- user output:
Valor Jogo 1: Valor Jogo 2: 125.0
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = jogol
            ^^^^^
NameError: name 'jogol' is not defined. Did you mean: 'jogo1'?
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
Valor Jogo 1: Valor Jogo 2: 190.18
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
---- user output:
Valor Jogo 1: Valor Jogo 2: 25.0
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = jogol
            ^^^^^
NameError: name 'jogol' is not defined. Did you mean: 'jogo1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:26:12)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:29:48)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo 2: "))
  total = jogo1 + (jogo2 - 0.25 * jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25 * jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25 * jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25 * jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25 * jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo 1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:32)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol
  print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:31)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol
  print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:45)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:30:40)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor Jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo 2: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor Jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor Jogo 1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:07)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1:
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:26:12)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:28:37)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo 2: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo 1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:43)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:29:48)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo 2: "))
  total = jogo1 + (jogo2 - 0.25 * jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25 * jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25 * jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25 * jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25 * jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo 1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:27:13)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:28:00)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo 1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:27:12)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:33:23)
-- CODE: 
quantidade = int(input())
jogo1 = float(input("Valor Jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo 2: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogo1

print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
Valor Jogo 1: Valor Jogo 2: 130.69
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
---- user output:
Valor Jogo 1: Valor Jogo 2: 125.0
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor Jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
Valor Jogo 1: Valor Jogo 2: 190.18
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
---- user output:
Valor Jogo 1: Valor Jogo 2: 25.0
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor Jogo 1: 72.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:07)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1:
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:45)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:32:58)
-- CODE: 
quantidade = int(input())
jogo1 = float(input("Valor Jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo 2: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00666667
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
Valor Jogo 1: Valor Jogo 2: 130.69
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
---- user output:
Valor Jogo 1: Valor Jogo 2: 125.0
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = jogol
            ^^^^^
NameError: name 'jogol' is not defined. Did you mean: 'jogo1'?
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
Valor Jogo 1: Valor Jogo 2: 190.18
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
---- user output:
Valor Jogo 1: Valor Jogo 2: 25.0
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = jogol
            ^^^^^
NameError: name 'jogol' is not defined. Did you mean: 'jogo1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:29:49)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo 2: "))
  total = jogo1 + (jogo2 - 0.25 * jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25 * jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25 * jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25 * jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25 * jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo 1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:29)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol
  print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:33:24)
-- CODE: 
quantidade = int(input())
jogo1 = float(input("Valor Jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo 2: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogo1

print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
Valor Jogo 1: Valor Jogo 2: 130.69
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
---- user output:
Valor Jogo 1: Valor Jogo 2: 125.0
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor Jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
Valor Jogo 1: Valor Jogo 2: 190.18
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
---- user output:
Valor Jogo 1: Valor Jogo 2: 25.0
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor Jogo 1: 72.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:24:32)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor jogo1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor jogo: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol
  print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor jogo1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor jogo1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:30:40)
-- CODE: 
quantidade = int(input())
jogol = float(input("Valor Jogo 1: "))
if (quantidade == 2):
  jogo2 = float(input("Valor Jogo 2: "))
  total = jogo1 + (jogo2 - 0.25*jogo2)
else:
  total = jogol

print(round(total,2))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
Valor Jogo 1: 100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogo1 + (jogo2 - 0.25*jogo2)
            ^^^^^
NameError: name 'jogo1' is not defined. Did you mean: 'jogol'?
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
Valor Jogo 1: 72.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
